--- a/public/assets/custom.css
+++ b/public/assets/custom.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Courier"; 
+  font-family: "Courier";
 }
 
 body {
@@ -22,5 +22,11 @@ body {
 
 .my-btn {
   width: 100%;
-  background-color: #577399;
+  background-color: rgba(87, 115, 153, 1);;
+  border: 1px solid rgba(87, 115, 153, 1);;
+}
+
+.my-btn:hover, .my-btn:visited, .my-btn:active {
+  background-color: rgba(87, 115, 153, .4);;
+  border: 1px solid rgba(87, 115, 153, .4);;
 }
