--- a/public/assets/custom.css
+++ b/public/assets/custom.css
@@ -22,11 +22,12 @@ body {
 
 .my-btn {
   width: 100%;
-  background-color: rgba(87, 115, 153, 1);;
-  border: 1px solid rgba(87, 115, 153, 1);;
+  background-color: rgba(87, 115, 153, 1);
+  border: 1px solid rgba(87, 115, 153, 1);
+  cursor: pointer;
 }
 
 .my-btn:hover, .my-btn:visited, .my-btn:active {
-  background-color: rgba(87, 115, 153, .4);;
-  border: 1px solid rgba(87, 115, 153, .4);;
+  background-color: rgba(87, 115, 153, .4);
+  border: 1px solid rgba(87, 115, 153, .4);
 }
